--- a/index.html
+++ b/index.html
@@ -1,36 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
+
   <head>
     <meta charset="utf-8">
-    <title>Aula Primeiro E</title>
+    <title>Aluno marco</title>
     <link rel="stylesheet" href="estilo.css">
   </head>
+
   <body>
+
     <div class="menuPrincipal">
-       <nav>
-         <ul>
-           <li><a href="index.html">Home</a></li>
-           <li><a href="pagina01.html">Página 01</a></li>
-           <li><a href="pagina02.html">Página 02</a></li>
-         </ul>
-       </nav>
+      <nav>
+        <ul>
+          <li><a href="index.html">home</a></li>
+          <li><a href="pagina01.html">pagina 01</a></li>
+          <li><a href="pagina02.html">pagina 02</a></li>
+        </ul>
+      </nav>
     </div>
 
-
-    <h1>Aluno Marco</h1>
-    <h2>Turma: 1E  - Número: 39</h2>
+    <h1>Página do marco</h1>
+    <p>Turma: 1E      Número: 39</p>
 
     <div class="caixa1">
-      Conteúdo da caixa 1
-    </div>
-
-    <div class="caixa2">
-      Conteúdo da caixa 2
-    </div>
-
-    <div class="caixa3">
-      Conteúdo da caixa 3
+      Caixa 1
     </div>
 
   </body>
+  
 </html>
