--- a/index.html
+++ b/index.html
@@ -12,18 +12,28 @@
     <div class="menuPrincipal">
       <nav>
         <ul>
-          <li><a href="index.html">home</a></li>
-          <li><a href="pagina01.html">pagina 01</a></li>
-          <li><a href="pagina02.html">pagina 02</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="pagina01.html">Página 01</a></li>
+          <li><a href="pagina02.html">Página 02</a></li>
         </ul>
       </nav>
     </div>
 
-    <h1>Página do marco</h1>
-    <p>Turma: 1E      Número: 39</p>
 
-    <div class="caixa1">
-      Caixa 1
+    <div class="conteudoHome">
+      <h1>O Ar</h1>
+      
+      <h2>É enssencia para viver</h2>
+
+        <img id="imagemHome" src="home.jpg" alt="">
+
+       <p>O ar é a mistura de gases que compõem a atmosfera da Terra.</p>
+       <p>Ele é composto principalmente de nitrogênio, oxigênio e argônio.</p>
+       <p>Os demais gases incluem gases de efeito estufa como vapor de água, dióxido de carbono, metano, óxido nitroso e ozônio.</p>
+    </div>
+
+    <div class="rodape">
+      Aluno: marco antonio andreotti junior - Nº39 - Primeiro E
     </div>
 
   </body>
