--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Aluno marco</title>
+    <title>Aluno Juan</title>
     <link rel="stylesheet" href="estilo.css">
   </head>
 
@@ -33,7 +33,7 @@
     </div>
 
     <div class="rodape">
-      Aluno: marco antonio andreotti junior - Nº39 - Primeiro E
+      Aluno: Juan Carlos Kulik Dos Santos - Nº24 - Primeiro E
     </div>
 
   </body>
